<resources>
    <string name="unknown">Неизвестно</string>
    <string name="searchName">Поиск</string>
    <string name="strikePrice"><strike>6990 руб.</strike></string>

    <string name="appName">Виртуальный стилист</string>

    <string name="main_menuItem_settings">Настройки</string>
    <string name="main_menuItem_feedback">Обратная связь</string>
    <string name="main_menuItem_search">Поиск</string>

    <string name="main_navMenuItem_main">Главная</string>
    <string name="main_navMenuItem_catalog">Каталог</string>
    <string name="main_navMenuItem_mannequin">Манекен</string>
    <string name="main_navMenuItem_cart">Корзина</string>
    <string name="main_navMenuItem_profile">Профиль</string>

    <string name="settings">Настройки</string>
    <string name="settings_basic">Основное</string>
    <string name="settings_basic_delivery">Адрес доставки</string>
    <string name="settings_app">Приложение</string>
    <string name="settings_app_cache">Очистить кеш</string>
    <string name="settings_app_notification">Уведомления</string>
    <string name="settings_app_notification_update">Частота обновления</string>
    <string name="settings_app_graphics">Графика</string>
    <string name="settings_app_graphics_quality">Качество графики</string>
    <string name="settings_app_version">Версия</string>

    <string name="auth_register_title">Регистрация</string>
    <string name="auth_register_email">E-Mail</string>
    <string name="auth_register_name">Имя</string>
    <string name="auth_register_password">Пароль</string>
    <string name="auth_register_repeat">Повторный пароль</string>
    <string name="auth_register_btn">Зарегистрироваться</string>
    <string name="auth_register_toLogin">У Вас есть аккаунт?</string>
    <string name="auth_login_title">Войти</string>
    <string name="auth_login_email">E-Mail</string>
    <string name="auth_login_password">Пароль</string>
    <string name="auth_login_btn">Войти</string>
    <string name="auth_login_toRegister">У Вас нет аккаунта?</string>

    <string name="mannequin_toClothes">Одеть/Снять</string>
    <string name="mannequin_remove">Убрать</string>
    <string name="mannequin_list">Список одежд:</string>

    <string name="catalog_for_men">Мужские</string>
    <string name="catalog_for_women">Женские</string>
    <string name="catalog_for_children">Детские</string>
    <string name="catalog_clothes_tshirt">Футболки</string>
    <string name="catalog_clothes_shirts">Рубашки</string>
    <string name="catalog_clothes_pants">Брюки</string>
    <string name="catalog_clothes_outwear">Верхняя одежда</string>
    <string name="catalog_clothes_jeans">Джинсы</string>
    <string name="catalog_clothes_overalls">Комбинезоны</string>
    <string name="catalog_clothes_suits">Костюмы</string>
    <string name="catalog_clothes_mikey">Майки</string>
    <string name="catalog_clothes_jackets">Пиджаки</string>
    <string name="catalog_clothes_hoodies">Толстовки</string>
    <string name="catalog_clothes_shorts">Шорты</string>
</resources>