<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/basic">

        <TextView
            android:id="@+id/auth_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/mustica_pro"
            android:textSize="30sp"
            android:textColor="#fff"
            android:text="@string/auth_register_title"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/auth_register_email"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:ems="10"
            android:textColorHint="@color/appAccent"
            android:backgroundTint="@color/appAccent"
            android:hint="@string/auth_register_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_register_title" />

        <EditText
            android:id="@+id/auth_register_name"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/auth_register_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/auth_register_name"
            android:textColorHint="@color/appAccent"
            android:backgroundTint="@color/appAccent"/>

        <EditText
            android:id="@+id/auth_register_password"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/auth_register_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/auth_register_password"
            android:textColorHint="@color/appAccent"
            android:backgroundTint="@color/appAccent"/>

        <EditText
            android:id="@+id/auth_register_repeat"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/auth_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/auth_register_repeat"
            android:textColorHint="@color/appAccent"
            android:backgroundTint="@color/appAccent"/>

        <Button
            android:id="@+id/auth_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/auth_register_repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/auth_register_btn"
            android:fontFamily="@font/mustica_pro"/>

        <TextView
            android:id="@+id/auth_register_toLogin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/auth_register_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/auth_register_toLogin"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/mustica_pro"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>